--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ SecVtxPUBNote/PUB/
 SecVtxPUBNote/INT/
 SecVtxPUBNote/Code/run/
 SecVtxPUBNote/Code/build/
+SecVtxPUBNote/Code/out/
+SecVtxPUBNote/Code/err/
